crates/ruma-events/tests/ui/08-enum-invalid-path.stderr
error: well-known matrix events have to start with `m.` found `not.a.path`
  --> $DIR/08-enum-invalid-path.rs:13:9
   |
13 |         "not.a.path",
   |         ^^^^^^^^^^^^

error[E0433]: failed to resolve: could not find `not` in `ruma_events`
 --> $DIR/08-enum-invalid-path.rs:6:9
  |
6 |         "m.not.a.path",
  |         ^^^^^^^^^^^^^^ could not find `not` in `ruma_events`
